--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Asset/css/style.css">
 </head>
 <body>
 <header class="head_bar">
@@ -83,7 +83,7 @@
   </section>
 </main>
 
-<script src="main.js"></script>
+<script src="Asset/Js/main.js"></script>
 
 </body>
 </html>
