--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <label for="inputBookIsComplete">Selesai dibaca</label>
         <input id="inputBookIsComplete" type="checkbox">
       </div>
-      <button id="bookSubmit" type="submit">Masukkan Buku ke rak <span>Belum selesai dibaca</span></button>
+      <button id="bookSubmit" type="submit-btn">Masukkan Buku ke rak <span>Belum selesai dibaca</span></button>
     </form>
   </section>
   
