--- a/index.html
+++ b/index.html
@@ -18,32 +18,34 @@
 <main>
   <section class="input_section">
     <h2>Masukkan Buku Baru</h2>
-    <form id="inputBook">
+    <form id="inputBook" action="" method="post">
       <div class="input">
-        <label for="inputBookTitle">Judul</label>
-        <input id="inputBookTitle" type="text" required>
+        <label for="bookTitle">Judul</label>
+        <input id="bookTitle" type="text" name="bookTitle" required>
       </div>
       <div class="input">
-        <label for="inputBookAuthor">Penulis</label>
-        <input id="inputBookAuthor" type="text" required>
+        <label for="bookAuthor">Penulis</label>
+        <input id="bookAuthor" type="text"  name="bookAuthor" required>
       </div>
       <div class="input">
-        <label for="inputBookYear">Tahun</label>
-        <input id="inputBookYear" type="number" required>
+        <label for="bookYear">Tahun</label>
+        <input id="bookYear" type="number" name="bookYear" required>
       </div>
       <div class="input_inline">
-        <label for="inputBookIsComplete">Selesai dibaca</label>
-        <input id="inputBookIsComplete" type="checkbox">
+        <label for="isComplete">Selesai dibaca</label>
+        <input id="isComplete" type="checkbox" name="isComplete">
       </div>
       <button id="bookSubmit" type="submit-btn">Masukkan Buku ke rak <span>Belum selesai dibaca</span></button>
     </form>
   </section>
   
   <section class="search_section">
-    <h2>Cari Buku (Opsional)</h2>
-    <form id="searchBook">
-      <label for="searchBookTitle">Judul</label>
-      <input id="searchBookTitle" type="text">
+    <h2 class="title">Cari Buku (Opsional)</h2>
+    <form id="searchBook" action="" method="post">
+      <div class="form-group">
+        <label for="searchBook">Judul</label>
+        <input id="searchBook" type="text" name="searchBook" placeholder="">
+      </div>
       <button id="searchSubmit" type="submit">Cari</button>
     </form>
   </section>
