menambahkan delete event

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <input id="searchBook" type="text" name="searchBook" placeholder="">
       </div>
       <button id="searchSubmit" type="submit">Cari</button>
+      <button id="searchSubmit" type="submit"><i class='bx bx-search-alt-2'></i></button>
     </form>
   </section>
   
