--- a/index.html
+++ b/index.html
@@ -1,78 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Bookshelf Apps</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="Asset/css/style.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bookshelf WEB</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="Asset/css/style.css">
+</head>
+<body>
     <header class="head_bar">
-      <h1 class="head_bar__title">Bookshelf Apps</h1>
+        <h1 class="head_bar__title">Bookshelf Apps</h1>
     </header>
     <main>
-      <section class="input_section" id="inputSection">
-        <h2 id="h2InputSection">Masukkan Buku Baru</h2>
-        <form id="inputBook">
-          <div class="input" id="sectionTitle">
-            <label for="inputBookTitle">Judul</label>
-            <input id="inputBookTitle" type="text" />
-            <small class="error-display" id="errorTitle">Wajib Diisi</small>
-          </div>
-          <div class="input" id="sectionAuthor">
-            <label for="inputBookAuthor">Penulis</label>
-            <input id="inputBookAuthor" type="text" />
-            <small class="error-display" id="errorAuthor">Wajib Diisi</small>
-          </div>
-          <div class="input" id="sectionYear">
-            <label for="inputBookYear">Tahun</label>
-            <input id="inputBookYear" type="number" />
-            <small class="error-display" id="errorYear">Wajib Diisi</small>
-          </div>
-          <div class="input_inline">
-            <label for="inputBookIsComplete">Selesai dibaca</label>
-            <input id="inputBookIsComplete" type="checkbox" />
-          </div>
-          <button id="bookSubmit" type="button">Masukkan Buku</button>
-        </form>
-      </section>
+        <div class="container" style="margin-right: 15px;">
+            <section class="input_section">
+                <h2>Masukkan Buku Baru</h2>
+                <form id="inputBook">
+                    <div class="input">
+                        <label for="inputBookTitle">Judul</label>
+                        <input id="inputBookTitle" type="text" required>
+                    </div>
+                    <div class="input">
+                        <label for="inputBookAuthor">Penulis</label>
+                        <input id="inputBookAuthor" type="text">
+                    </div>
+                    <div class="input">
+                        <label for="inputBookYear">Tahun</label>
+                        <input id="inputBookYear" type="number">
+                    </div>
+                    <div class="input_inline">
+                        <label for="inputBookIsComplete">Selesai dibaca</label>
+                        <input id="inputBookIsComplete" type="checkbox">
+                    </div>
+                    <button id="bookSubmit" value="Submit" type="submit">Masukkan Buku</button>
+                </form>
+            </section>
 
-      <button id="darkButton" class="dark-button">Dark Mode</button>
+            <section class="search_section">
+                <h2>Cari Buku</h2>
+                <form id="searchBook">
+                    <label for="searchBookTitle">Judul</label>
+                    <div class="container_search">
+                        <input id="searchBookTitle" type="text">
+                        <button id="searchSubmit" type="button"><svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
+                                fill="none">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <path fill="#323232" fill-rule="evenodd"
+                                        d="M4 9a5 5 0 1110 0A5 5 0 014 9zm5-7a7 7 0 104.2 12.6.999.999 0 00.093.107l3 3a1 1 0 001.414-1.414l-3-3a.999.999 0 00-.107-.093A7 7 0 009 2z">
+                                    </path>
+                                </g>
+                            </svg></button>
+                    </div>
+                </form>
+                <div class="search_results">
+                    <h2>Hasil pencarian</h2>
+                    <div id="searchResults" class="book_list"></div>
+                </div>
+            </section>
+        </div>
 
-      <section class="search_section book_shelf" id="searchSection">
-        <h2 id="searchSectionH2">Cari Buku</h2>
-        <form id="searchBook" style="overflow-x: scroll">
-          <label for="searchBookTitle">Keyword</label>
-          <input id="searchBookTitle" type="text" />
-          <button id="searchSubmit" type="submit">Cari</button>
-        </form>
+        <div class="container" style="margin-left: 15px;">
+            <section class="book_shelf">
+                <h2>Belum selesai dibaca</h2>
+                <div id="unCompleteBookshelfList" class="book_list"></div>
+            </section>
 
-        <div id="searchResult" class="book_list" style="width: 100%"></div>
-      </section>
-
-      <section class="book_shelf" id="bookShelfUncompleted">
-        <h2 id="uncompletedH2">Belum selesai dibaca</h2>
-
-        <div id="incompleteBookshelfList" class="book_list"></div>
-      </section>
-
-      <section class="book_shelf" id="bookShelfCompleted">
-        <h2 id="completedH2">Selesai dibaca</h2>
-
-        <div id="completeBookshelfList" class="book_list"></div>
-      </section>
+            <section class="book_shelf">
+                <h2>Selesai dibaca</h2>
+                <div id="completeBookshelfList" class="book_list"></div>
+            </section>
+        </div>
     </main>
 
-    <script src="Asset/Js/main.js"></script>
-    <script src="darkmode.js"></script>
-  </body>
+    <!-- Modal Konfirmasi Delete -->
+    <div class="modal" id="confirmDeleteModal" tabindex="1" role="dialog">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Konfirmasi Delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  Apakah Anda yakin ingin menghapus buku ini?
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Tidak</button>
+                  <button type="button" class="btn btn-danger" id="confirmDeleteButton">Ya</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="Asset/Js/main.js" type="text/javascript"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
